MO reg Capital 39/39, MO reg SmallCase 9/45

--- a/README/assets/css/style.css
+++ b/README/assets/css/style.css
@@ -774,7 +774,9 @@ h2 strong {
 }
 /* mermaid */
 
-.codehilite.mermaid .section {
+.codehilite.mermaid .section.section1,
+.codehilite.mermaid .section.section3,
+.codehilite.mermaid .section.section5 {
     fill: transparent !important;
 }
 
